# neywa-os

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deploy.sh
assets/: AppIcon.icns
src/: claude.rs  cli.rs  codex.rs  config.rs  discord.rs  discord_api.rs  main.rs  service.rs  tray.rs
